# detecte-python

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: release.yml  test.yml
github_workflows_install_manually/: README.md
src/detecte/: __init__.py  client.py  errors.py  http.py  types.py  webhooks.py
src/detecte/integrations/: langchain.py
tests/: test_client.py  test_webhooks.py
