[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "detecte"
version = "0.1.1"
description = "Runtime security for AI agents — Python SDK for detecte.xyz"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.9"
authors = [{ name = "Detecte" }]
keywords = ["ai", "agents", "security", "runtime", "policy", "kya", "llm"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Topic :: Security",
]
dependencies = [
  "httpx>=0.25",
  "pydantic>=2.0",
  "typing_extensions>=4.5",
]

[project.optional-dependencies]
dev = ["pytest>=8", "pytest-asyncio>=0.23", "respx>=0.21", "ruff>=0.5", "mypy>=1.10"]

[project.urls]
Homepage = "https://detecte.xyz"
Documentation = "https://docs.detecte.xyz"
Repository = "https://github.com/DoctorMathx/detecte-python"
Issues = "https://github.com/DoctorMathx/detecte-python/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/detecte"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
